# magication

./: .dockerignore  .env.example  .gitignore  DATAMAP.md  Dockerfile  PRD.md  README.md  RELEASING.md  docker-compose.yml  implementation_plan.md  pyproject.toml  task.md
.github/workflows/: publish.yml
db/: schema.sql
db/migrations/: 0002_tenancy_rls.sql
docs/: DOCKER.md
inputs/: rate_card.csv
src/core/: __init__.py  candidate.py  cascade.py  decision.py  fields.yaml  formulas.py  mcda.py  operations.py  registry.py  solve.py  trip.py
src/moat/: __init__.py  config.py  db.py  models.py  scheduler.py
src/moat/adapters/: queue_times.py
src/moat/ingest/: wait_poller.py
src/moat/ports/: wait_times.py
tests/: test_queue_times.py  test_wait_poller.py
tests/core/: test_cascade.py  test_datamap.py  test_mcda.py  test_operations.py  test_registry.py  test_solve.py  test_validator.py
