[project]
name = "magication-moat"
version = "0.0.1"
description = "Phase 0 accumulation layer: day-0 wait-time poller + history tables (the moat)."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
moat-poll = "moat.scheduler:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
